# nasty-boii

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  MAINTENANCE.md  Makefile  README.md
src/: lib.rs  main.rs
tests/: cli.rs
tests/data/clean-repo/: Cargo.toml
tests/fixtures/: mod.rs
tests/origin.git/refs/heads/: main
