[package]
name = "nasty-boii"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = "0.19"
walkdir = "2.5"
rayon = "1.10"
num_cpus = "1.16"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
